@@ -157,25 +157,40 @@ Specifies the port number on which the mini-server (MOM) will
 listen for resource monitor requests, task manager requests and inter-MOM
 messages.  Both a UDP and a TCP port of this number will be used.
 .IP "\-p" 16
-Specifies the impact on jobs which were in execution when the mini-server
-shut down.  On any restart of MOM, the new mini-server will not be the
-parent of any running jobs, MOM has lost control of her offspring (not a new
-situation for a mother).
-With the \-p option, MOM will allow the jobs to continue to run and
-monitor them indirectly via polling. This flag is redundant in that 
-this is the default behavior when starting the server.
-The \-p option is mutually exclusive with the \-r and \-q options.
+(Default) (Preserve running jobs) -- Specifies the impact on jobs which were in execution when the 
+mini-server shut-down. The -p option tries to 
+preserve any running jobs when the MOM restarts. The new mini-server 
+will not be the parent of any running jobs, MOM has lost control of her 
+offspring (not a new situation for a mother). The MOM will allow the jobs 
+to continue to run and monitor them indirectly via polling. All recovered 
+jobs will report an exit code of 0 when they are complete.
+The \-p option is mutually exclusive with the \-r, \-P and \-q options.
+.IP "\-P" 16
+(Terminate all jobs and remove them from the queue) -- Specifies the impact 
+on jobs which were in execution when the mini-server shut-down.  
+With the \-P option, it is assumed that either the entire system
+has been restarted or the MOM has been down so long that it can no longer
+guarantee that the pid of any running process is the same as the recorded job
+process pid of a recovering job. Unlike the -p option no attempt is made to
+try and preserve or recover running jobs. All jobs are terminated and removed
+from the queue.
+The \-q option is mutually exclusive with the \-p, \-q and \-r options.
 .IP "\-q" 16
-Specifies the impact on jobs which were in execution when the mini-server
-shut down.  With the \-q option,
-The MOM will mark the jobs as terminated and notify the batch server which
-owns the job. The \-q option is mutually exclusive with the \-p and \-r options.
+(Requeue all jobs) -- Specifies the impact on jobs which were in execution when the mini-server
+shut-down.   Do not terminate running processes.
+With the \-q option, it is assumed that either the entire system
+has been restarted or the MOM has been down so long that it can no longer
+guarantee that the pid of any running process is the same as the recorded job
+process pid of a recovering job. No attempt is made to kill job processes. 
+Jobs are reset to a queued state so they can be run again.
+The \-q option is mutually exclusive with the \-p, \-P and \-r options.
 .IP "\-r" 16
-Specifies the impact on jobs which were in execution when the mini-server
-shut down.  With the \-r option,
-MOM will kill any processes belonging to jobs, mark the jobs as terminated,
-and notify the batch server which owns the job.
-The \-r option is mutually exclusive with the \-p and \-q options.
+(Terminate running processes and requeue all jobs) -- Specifies the impact on jobs 
+which were in execution when the mini-server shut-down. With the \-r option,
+MOM will kill any processes belonging to running jobs, mark the jobs as 
+terminated and notify the batch server that owns the job. Jobs are reset 
+to a queued state so they can be run again.
+The \-r option is mutually exclusive with the \-p, \-P and \-q options.
 .IP
 If the \-r option is used following a reboot,
 process IDs (pids) may be reused and
@@ -383,7 +398,7 @@ event-driver, or both.  The value starts with an integer specifying the number
 of MOM intervals between subsequent executions of the specified health check.
 After the integer is an optional comma-separated list of event names.
 Currently supported are "jobstart" and "jobend".  This value defaults to 1 with
-no events indicating the check is run every mom interval. (see HEALTH CHECK for
+no events indicating the check is run every MOM interval. (see HEALTH CHECK for
 more information)
 .IP
 .Ty "$node_check_interval 0"  Disabled.
@@ -393,7 +408,7 @@ more information)
 .Ty "$node_check_interval 10,jobstart,jobend"
 .IP
 .IP prologalarm
-Specifies maximum duration (in seconds) which the mom will wait for the job prolog
+Specifies maximum duration (in seconds) which the MOM will wait for the job prolog
 or job job epilog to complete.  This parameter default to 300 seconds (5 minutes)
 .IP rcpcmd
 Specify the the full path and argument to be used for remote file copies.  This overrides
@@ -406,7 +421,7 @@ the remote host and accept arguments of the form "user@host:files"  For example:
 .Ty "$rcpcmd /usr/bin/scp \-rpB
 .IP remote_checkpoint_dirs
 Specifies what server checkpoint directories are remotely mounted.  This directive is used to
-tell the MOM which directories are shared with the server.  Using remote checkpoint directories eliminates the need to copy the checkpoint files back and forth between the mom and the server. This parameter is available in 2.4.1 and later.
+tell the MOM which directories are shared with the server.  Using remote checkpoint directories eliminates the need to copy the checkpoint files back and forth between the MOM and the server. This parameter is available in 2.4.1 and later.
 .IP
 .Ty "$remote_checkpoint_dirs /var/spool/torque/checkpoint"
 .IP remote_reconfig
@@ -544,7 +559,7 @@ results in pbs_mom exiting without terminating any running jobs.
 This is the action for the following signals as well: SIGXCPU, SIGXFSZ,
 SIGCPULIM, and SIGSHUTDN.
 .IP "SIGUSR1, SIGUSR2"
-causes mom to increase and decrease logging levels, respectively.
+causes MOM to increase and decrease logging levels, respectively.
 .IP "SIGPIPE, SIGINFO"
  are ignored.
 .IP "SIGBUS, SIGFPE, SIGILL, SIGTRAP, and SIGSYS"
